[package]
name = "jerevuola"
version = "0.2.1"
edition = "2021"

[dependencies]
yew = "0.19.3"
log = "0.4.17"
web-sys = { version = "0.3.60", features = ["MediaQueryList"] }
wasm-logger = "0.2.0"
wasm-bindgen = "0.2.83"

# wasm binary optimizations
[profile.release]
panic = 'abort'
codegen-units = 1
opt-level = 'z'
lto = true
