[package]
name = "jerevuola"
version = "0.2.2"
edition = "2021"

[dependencies]
yew = { version = "0.20.0", features = [ "csr" ] }
web-sys = { version = "0.3.64", features = ["MediaQueryList"] }
wasm-bindgen = "0.2.87"

# wasm binary optimizations
[profile.release]
panic = 'abort'
codegen-units = 1
opt-level = 's'
lto = true
