[package]
name = "jerevuola"
version = "0.2.3"
edition = "2021"

[dependencies]
yew = { version = "0.21.0", features = [ "csr" ] }
web-sys = { version = "0.3.69", features = ["MediaQueryList"] }
wasm-bindgen = "0.2.92"

# wasm binary optimizations
[profile.release]
panic = 'abort'
codegen-units = 1
opt-level = 's'
lto = true
